re-gen with 1.6 agx
svn path=/feedfeeder/trunk/; revision=32011

--- a/i18n/generated.pot
+++ b/i18n/generated.pot
@@ -31,3 +31,8 @@ msgstr ""
 msgid "feedfeeder_label_feeds"
 msgstr ""
 
+#. Default: "Links"
+#: content/FeedFeederItem.py
+msgid "feedfeeder_label_links"
+msgstr ""
+
