--- a/i18n/generated.pot
+++ b/i18n/generated.pot
@@ -33,6 +33,6 @@ msgstr ""
 
 #. Default: "Links"
 #: content/FeedFeederItem.py
-msgid "feedfeeder_label_links"
+msgid "feedfeeder_label_link"
 msgstr ""
 
