--- a/i18n/feedfeeder-nl.po
+++ b/i18n/feedfeeder-nl.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2006-10-06 13:01+0000\n"
-"PO-Revision-Date: 2006-10-06 15:05+0200\n"
+"POT-Creation-Date: 2006-10-19 12:46+0000\n"
+"PO-Revision-Date: 2006-10-19 14:47+0200\n"
 "Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
 "Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
@@ -30,6 +30,11 @@ msgstr "Laatste wijziging"
 #: content/FeedfeederFolder.py
 msgid "feedfeeder_label_feeds"
 msgstr "URLs van de feeds"
+
+#. Default: "Links"
+#: content/FeedFeederItem.py
+msgid "feedfeeder_label_link"
+msgstr "URL (van het oorspronkelijke item)"
 
 #. Default: "Test view showing the latest items from the feeds"
 #: skins/feedfeeder/latest_items.pt
