--- a/i18n/feedfeeder-fr.po
+++ b/i18n/feedfeeder-fr.po
@@ -4,49 +4,50 @@ msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
 "POT-Creation-Date: 2006-10-19 12:46+0000\n"
-"PO-Revision-Date: Thu Jul 20 09:13:40 2006\n"
-"Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
-"Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n"
+"PO-Revision-Date: Jul 11 09:13:40 2007\n"
+"Last-Translator: Thomas Desvenain <thomas.desvenain@ingeniweb.com>\n"
+"Language-Team: Ingeniweb <thomas.desvenain@ingeniweb.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
-"Preferred-Encodings: latin1 utf-8\n"
+"Language-Code: fr\n"
+"Language-Name: French\n"
+"Preferred-Encodings: utf-8\n"
 "Domain: feedfeeder\n"
 
 #. Default: "Feeditemauthor"
 #: content/FeedFeederItem.py
 msgid "feedfeeder_label_feedItemAuthor"
-msgstr ""
+msgstr "Auteur du flux"
 
 #. Default: "Feeditemupdated"
 #: content/FeedFeederItem.py
 msgid "feedfeeder_label_feedItemUpdated"
-msgstr ""
+msgstr "Flux Rss rafraîchi"
 
 #. Default: "Feeds"
 #: content/FeedfeederFolder.py
 msgid "feedfeeder_label_feeds"
-msgstr ""
-
-#. Default: "Links"
-#: content/FeedFeederItem.py
-msgid "feedfeeder_label_link"
-msgstr ""
-
-#. Default: "Test view showing the latest items from the feeds"
-#: skins/feedfeeder/latest_items.pt
-msgid "test_view_title"
-msgstr ""
+msgstr "Flux"
 
 #. 'Default transition'
 #: content/folder.py
 msgid "label_default_transition"
-msgstr ""
+msgstr "Transition par défaut"
 
 #. "When updating this feed's item the transition selected below will be performed."
 #: content/folder.py
 msgid "help_default_transition"
-msgstr ""
+msgstr "La transition effectuée lorsque vous mettez à jour ce flux"
+
+#. Default: "Links"
+#: content/FeedFeederItem.py
+msgid "feedfeeder_label_link"
+msgstr "Liens"
+
+#. Default: "Test view showing the latest items from the feeds"
+#: skins/feedfeeder/latest_items.pt
+msgid "test_view_title"
+msgstr "Vue affichant les derniers items du flux"
+
