--- a/i18n/feedfeeder-plone-fr.po
+++ b/i18n/feedfeeder-plone-fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
+"Language-Code: fr\n"
 "Language-Name: French\n"
 "Preferred-Encodings: utf-8\n"
 "Domain: plone\n"
