Remove semicolon in page template that broke in Plone 3.  Worked fine in 2.5, but was superfluous there too.
svn path=/feedfeeder/trunk/; revision=64724

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,8 @@
 1.0 beta 3 (unreleased)
 -----------------------
 
+- Remove semicolon in page template that broke in Plone 3.  [maurits]
+
 - Fix imports so they work in Plone 3 as well, without deprecation
   warnings.  [derstappenit]
 
