--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,9 @@
 1.0 beta 3 (unreleased)
 -----------------------
 
+- In the tests, use plone_workflow explicitly, so it is easier to test
+  on both Plone 2.5 and 3.0.  [maurits]
+
 - Make update_feed_items available in the object_buttons for Plone 3,
   using new small @@is_feedcontainer as condition.  [maurits]
 
