Read version from version.txt. Prepare release.
svn path=/feedfeeder/trunk/; revision=65294

--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,4 +1,4 @@
-1.0 beta 4 (unreleased)
+1.0 beta 4 (20 May 2008)
 -----------------------
 
 - Eggification: you can now install it as the Products.feedfeeder
