back to development
svn path=/feedfeeder/trunk/; revision=68449

--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+1.0 rc 2 (unreleased)
+---------------------
+
+- nothing yet
+
+
 1.0 rc 1 (2008-07-15)
 ---------------------
 
