--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+1.0 rc 3 (unreleased)
+---------------------
+
+- Nothing yet.
+
+
 1.0 rc 2 (2008-07-23)
 ---------------------
 
