Back to development: 1.0rc4 dev
svn path=/feedfeeder/trunk/; revision=72997

--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+1.0rc4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.0rc3 (2008-10-04)
 -------------------
 
