Added a todo item: get rid of extendeddatetime.py hack. But this needs a very difficult fix in zope DateTime, so this could take a while.
svn path=/feedfeeder/trunk/; revision=82651

--- a/Products/feedfeeder/TODO.txt
+++ b/Products/feedfeeder/TODO.txt
@@ -1,1 +1,4 @@
-- No plans yet.
+- Get rid of extendeddatetime.py hack; but this needs a very difficult
+  fix in zope DateTime, so this could take a while.  See:
+  http://new.plone.org/products/feedfeeder/issues/20 and
+  https://bugs.launchpad.net/zope2/+bug/142148
