--- a/Products/feedfeeder/i18n/feedfeeder-fr.po
+++ b/Products/feedfeeder/i18n/feedfeeder-fr.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2006-10-19 12:46+0000\n"
+"POT-Creation-Date: 2009-05-09 21:38+0000\n"
 "PO-Revision-Date: Jul 11 09:13:40 2007\n"
 "Last-Translator: Thomas Desvenain <thomas.desvenain@ingeniweb.com>\n"
 "Language-Team: Ingeniweb <thomas.desvenain@ingeniweb.com>\n"
@@ -31,23 +31,23 @@ msgstr "Flux Rss rafraîchi"
 msgid "feedfeeder_label_feeds"
 msgstr "Flux"
 
-#. 'Default transition'
-#: content/folder.py
-msgid "label_default_transition"
-msgstr "Transition par défaut"
+#. Default: "Links"
+#: content/FeedFeederItem.py
+msgid "feedfeeder_label_link"
+msgstr "Liens"
 
 #. "When updating this feed's item the transition selected below will be performed."
 #: content/folder.py
 msgid "help_default_transition"
 msgstr "La transition effectuée lorsque vous mettez à jour ce flux"
 
-#. Default: "Links"
-#: content/FeedFeederItem.py
-msgid "feedfeeder_label_link"
-msgstr "Liens"
+#. 'Default transition'
+#: content/folder.py
+msgid "label_default_transition"
+msgstr "Transition par défaut"
 
 #. Default: "Test view showing the latest items from the feeds"
-#: skins/feedfeeder/latest_items.pt
+#: skins/feedfeeder/latest_items.pt:7
 msgid "test_view_title"
 msgstr "Vue affichant les derniers items du flux"
 
