--- a/Products/feedfeeder/i18n/feedfeeder-plone.pot
+++ b/Products/feedfeeder/i18n/feedfeeder-plone.pot
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: feedfeeder\n"
+"Project-Id-Version: feedfeeder 1.0\n"
 "POT-Creation-Date: 2006-10-19 12:46+0000\n"
-"PO-Revision-Date: Thu Jul 20 09:13:40 2006\n"
+"PO-Revision-Date: 2006-10-19 12:46+0000\n"
 "Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
-"Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n Mirella van Teulingen <m.van.teulingen@zestsoftware.nl>\n"
+"Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
