--- a/Products/feedfeeder/i18n/feedfeeder-plone-eu.po
+++ b/Products/feedfeeder/i18n/feedfeeder-plone-eu.po
@@ -4,7 +4,7 @@ msgstr ""
 "POT-Creation-Date: 2006-10-19 12:46+0000\n"
 "PO-Revision-Date: 2007-02-16 15:13+0100\n"
 "Last-Translator: Mikel Larreategi <mlarreategi@codesyntax.com>\n"
-"Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n"
+"Language-Team: Mikel Larreategi <mlarreategi@codesyntax.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,9 +14,9 @@ msgstr ""
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: plone\n"
 
-msgid "Feed folder"
-msgstr "Jario karpeta"
-
 msgid "Feed Item"
 msgstr "Jario elementua"
+
+msgid "Feed folder"
+msgstr "Jario karpeta"
 
