--- a/Products/feedfeeder/i18n/feedfeeder-plone-nl.po
+++ b/Products/feedfeeder/i18n/feedfeeder-plone-nl.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
 "POT-Creation-Date: 2006-10-19 12:46+0000\n"
-"PO-Revision-Date: Thu Jul 20 09:13:40 2006\n"
+"PO-Revision-Date: 2006-10-19 12:46+0000\n"
 "Last-Translator: Mirella van Teulingen <m.van.teulingen@zestsoftware.nl>\n"
-"Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n Mirella van Teulingen <m.van.teulingen@zestsoftware.nl>\n"
+"Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,8 +14,9 @@ msgstr ""
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: plone\n"
 
+msgid "Feed Item"
+msgstr "Feed Item"
+
 msgid "Feed folder"
 msgstr "Feedmap"
 
-msgid "Feed Item"
-msgstr "Feed Item"
