--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+1.0rc6 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.0rc5 (2009-07-02)
 -------------------
 
