--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -7,6 +7,12 @@ History of feedfeeder
 - Nothing changed yet.
 
 
+1.0rc7 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.0rc6 (2009-09-21)
 -------------------
 
