Document new portal type agnostic backwards incompatible version
svn path=/feedfeeder/branches/rossp-type-agnostic/; revision=101103

--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,14 @@
 History of feedfeeder
 =====================
 
+2.0 (unreleased)
+-------------------
+
+- Make feedfeeder portal type agnostic such that any folderish item
+  can be configured to have content items added to it from syndication
+  URLs and the content item type to be added can also be selected from
+  existing portal types.
+
 1.0rc7 (unreleased)
 -------------------
 
