--- a/Products/feedfeeder/i18n/plone.pot
+++ b/Products/feedfeeder/i18n/plone.pot
@@ -14,7 +14,7 @@ msgstr ""
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: plone\n"
 
-msgid "Feed folder"
+msgid "Feed Folder"
 msgstr ""
 
 msgid "Feed Item"
