--- a/Products/feedfeeder/i18n/feedfeeder-pt-br.po
+++ b/Products/feedfeeder/i18n/feedfeeder-pt-br.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2009-05-09 21:38+0000\n"
+"POT-Creation-Date: 2009-11-05 20:07+0000\n"
 "PO-Revision-Date: Thu Jul 20 09:13:40 2006\n"
 "Last-Translator: Luciano Pacheco <lucmult@gmail.com>\n"
 "Language-Team: Luciano Pacheco <lucmult@gmail.com>\n"
@@ -16,6 +16,11 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: feedfeeder\n"
 
+#. Default: "last modified"
+#: ./browser/feed-item.pt:36
+msgid "box_last_modified"
+msgstr "última modificação"
+
 #. Default: "Feeditemauthor"
 #: content/FeedFeederItem.py
 msgid "feedfeeder_label_feedItemAuthor"
@@ -25,6 +30,11 @@ msgstr "Autor do Item"
 #: content/FeedFeederItem.py
 msgid "feedfeeder_label_feedItemUpdated"
 msgstr "Atualização do Item"
+
+#. "Feed Title"
+#: content/folder.py
+msgid "feedfeeder_label_feedTitle"
+msgstr "Título RSS"
 
 #. Default: "Feeds"
 #: content/FeedfeederFolder.py
@@ -46,8 +56,38 @@ msgstr "Quando um novo item do RSS for criado será feita a seguinte transição
 msgid "label_default_transition"
 msgstr "Transição padrão"
 
+#. Default: "here"
+#: ./browser/feed-item.pt:108
+msgid "link_here"
+msgstr "aqui"
+
+#. Default: "This item does not have any body text, click the edit tab to change it."
+#: ./browser/feed-item.pt:81
+msgid "no_body_text"
+msgstr "Esse item não tem nenhum texto no corpo, clique na aba Edição para alterá-lo."
+
+#. Default: "Source available"
+#: ./browser/feed-item.pt:105
+msgid "source_available"
+msgstr "Original disponível em"
+
+#. Default: "string:here"
+#: ./browser/feed-item.pt:108
+msgid "string:here"
+msgstr "aqui"
+
 #. Default: "Test view showing the latest items from the feeds"
 #: skins/feedfeeder/latest_items.pt:7
 msgid "test_view_title"
 msgstr "Exibição de teste exibindo os últimos itens do RSS"
+
+#. Default: "Contributors: ${name}"
+#: ./browser/feed-item.pt:60
+msgid "text_contributors"
+msgstr "Colaboradores: ${name}"
+
+#. Default: "— expired"
+#: ./browser/feed-item.pt:43
+msgid "time_expired"
+msgstr "- expirado"
 
