--- a/Products/feedfeeder/i18n/feedfeeder-fr.po
+++ b/Products/feedfeeder/i18n/feedfeeder-fr.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2009-11-05 20:07+0000\n"
+"POT-Creation-Date: 2009-11-05 22:04+0000\n"
 "PO-Revision-Date: Jul 11 09:13:40 2007\n"
 "Last-Translator: Thomas Desvenain <thomas.desvenain@ingeniweb.com>\n"
 "Language-Team: Ingeniweb <thomas.desvenain@ingeniweb.com>\n"
@@ -56,24 +56,14 @@ msgstr "La transition effectuée lorsque vous mettez à jour ce flux"
 msgid "label_default_transition"
 msgstr "Transition par défaut"
 
-#. Default: "here"
-#: ./browser/feed-item.pt:108
-msgid "link_here"
-msgstr ""
-
 #. Default: "This item does not have any body text, click the edit tab to change it."
 #: ./browser/feed-item.pt:81
 msgid "no_body_text"
 msgstr ""
 
-#. Default: "Source available"
+#. Default: "Source available here."
 #: ./browser/feed-item.pt:105
-msgid "source_available"
-msgstr ""
-
-#. Default: "string:here"
-#: ./browser/feed-item.pt:108
-msgid "string:here"
+msgid "source_available_here"
 msgstr ""
 
 #. Default: "Test view showing the latest items from the feeds"
