--- a/Products/feedfeeder/i18n/feedfeeder-nl.po
+++ b/Products/feedfeeder/i18n/feedfeeder-nl.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2009-11-05 20:07+0000\n"
-"PO-Revision-Date: 2006-10-19 14:47+0200\n"
+"POT-Creation-Date: 2009-11-05 22:04+0000\n"
+"PO-Revision-Date: 2009-11-05 23:05+0100\n"
 "Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
 "Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
@@ -56,25 +56,15 @@ msgstr ""
 msgid "label_default_transition"
 msgstr ""
 
-#. Default: "here"
-#: ./browser/feed-item.pt:108
-msgid "link_here"
-msgstr ""
-
 #. Default: "This item does not have any body text, click the edit tab to change it."
 #: ./browser/feed-item.pt:81
 msgid "no_body_text"
 msgstr ""
 
-#. Default: "Source available"
+#. Default: "Source available here."
 #: ./browser/feed-item.pt:105
-msgid "source_available"
-msgstr ""
-
-#. Default: "string:here"
-#: ./browser/feed-item.pt:108
-msgid "string:here"
-msgstr ""
+msgid "source_available_here"
+msgstr "Bron hier beschikbaar."
 
 #. Default: "Test view showing the latest items from the feeds"
 #: skins/feedfeeder/latest_items.pt:7
