--- a/Products/feedfeeder/i18n/plone-eu.po
+++ b/Products/feedfeeder/i18n/plone-eu.po
@@ -14,9 +14,9 @@ msgstr ""
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: plone\n"
 
+msgid "Feed Folder"
+msgstr ""
+
 msgid "Feed Item"
 msgstr "Jario elementua"
-
-msgid "Feed folder"
-msgstr "Jario karpeta"
 
