--- a/Products/feedfeeder/i18n/feedfeeder-nl.po
+++ b/Products/feedfeeder/i18n/feedfeeder-nl.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: feedfeeder\n"
 "POT-Creation-Date: 2009-11-05 22:04+0000\n"
 "PO-Revision-Date: 2009-11-05 23:05+0100\n"
-"Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
-"Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n"
+"Last-Translator: Maurits van Rees <m.van.rees@zestsoftware.nl>\n"
+"Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,7 +19,7 @@ msgstr ""
 #. Default: "last modified"
 #: ./browser/feed-item.pt:36
 msgid "box_last_modified"
-msgstr ""
+msgstr "laatst gewijzigd"
 
 #. Default: "Feeditemauthor"
 #: content/FeedFeederItem.py
@@ -34,7 +34,7 @@ msgstr "Laatste wijziging"
 #. "Feed Title"
 #: content/folder.py
 msgid "feedfeeder_label_feedTitle"
-msgstr ""
+msgstr "Titel van feed"
 
 #. Default: "Feeds"
 #: content/FeedfeederFolder.py
@@ -49,17 +49,17 @@ msgstr "URL (van het oorspronkelijke item)"
 #. "When updating this feed's item the transition selected below will be performed."
 #: content/folder.py
 msgid "help_default_transition"
-msgstr ""
+msgstr "Tijdens het updaten van een item uit deze feed wordt de transitie uitgevoerd die beneded geselecteerd is."
 
 #. 'Default transition'
 #: content/folder.py
 msgid "label_default_transition"
-msgstr ""
+msgstr "Standaardtransitie"
 
 #. Default: "This item does not have any body text, click the edit tab to change it."
 #: ./browser/feed-item.pt:81
 msgid "no_body_text"
-msgstr ""
+msgstr "Dit item heeft geen bodytekst; klik op de edit-tab om het te wijzigen."
 
 #. Default: "Source available here."
 #: ./browser/feed-item.pt:105
@@ -74,10 +74,9 @@ msgstr "Test overzicht: de laatste items uit de feeds"
 #. Default: "Contributors: ${name}"
 #: ./browser/feed-item.pt:60
 msgid "text_contributors"
-msgstr ""
+msgstr "Auteurs: ${name}"
 
 #. Default: "— expired"
 #: ./browser/feed-item.pt:43
 msgid "time_expired"
-msgstr ""
-
+msgstr "- verlopen"
