--- a/Products/feedfeeder/i18n/plone-nl.po
+++ b/Products/feedfeeder/i18n/plone-nl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
 "POT-Creation-Date: 2006-10-19 12:46+0000\n"
-"PO-Revision-Date: 2006-10-19 12:46+0000\n"
-"Last-Translator: Mirella van Teulingen <m.van.teulingen@zestsoftware.nl>\n"
+"PO-Revision-Date: 2009-11-05 23:24+0100\n"
+"Last-Translator: Maurits van Rees <m.van.rees@zestsoftware.nl>\n"
 "Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,8 +15,8 @@ msgstr ""
 "Domain: plone\n"
 
 msgid "Feed Folder"
-msgstr ""
+msgstr "Feedfolder"
 
 msgid "Feed Item"
-msgstr "Feed Item"
+msgstr "Feeditem"
 
