--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+1.0rc8 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.0rc7 (2009-11-06)
 -------------------
 
