--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -4,7 +4,10 @@ History of feedfeeder
 1.0rc8 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Some summaries are a snippet from the full content, and then they
+  can contain broken html; in this case we are now saving the raw
+  broken html, parsing it only when possible.
+  [lucmult]
 
 
 1.0rc7 (2009-11-06)
