--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+1.0.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.0.1 (2010-04-02)
 ------------------
 
