Back to development: 2.0.1
svn path=/feedfeeder/trunk/; revision=120240

--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+2.0.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0 (2010-07-05)
 ----------------
 
