--- a/Products/feedfeeder/CHANGES.txt
+++ b/Products/feedfeeder/CHANGES.txt
@@ -1,6 +1,9 @@
 With this system feed items data will be saved in a objectInfo field. It memoize the entry data, a dict.
 Changing the remote RSS template, you will memoize different data without having to change the feed item schema.
 
+There is also an option on feed folder that let you choose to redirect automatically to remote resources. If you have
+modify permissions on feed items there will not be any redirect.
+
 If you want to index some value, you will be able to register a catalog indexer like that:
 
 <adapter factory='.indexers.start' name='start' />
