--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -16,6 +16,9 @@ History of feedfeeder
   on feed items there will not be any redirect
   [dmoro]
 
+- Added new tests
+  [sithmel]
+
 
 2.0.1 (2010-11-26)
 ------------------
