--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+2.0.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.4 (2011-03-24)
 ------------------
 
