--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -1,6 +1,12 @@
 History of feedfeeder
 =====================
 
+2.0.7 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.6 (2011-10-03)
 ------------------
 
