--- a/Products/feedfeeder/HISTORY.txt
+++ b/Products/feedfeeder/HISTORY.txt
@@ -4,6 +4,10 @@ History of feedfeeder
 2.0.7 (unreleased)
 ------------------
 
+- Cleaned up our type info, removing some cruft from Plone 2.5.
+  Added upgrade step for this.
+  [maurits]
+
 - protect against UnicodeDecode errors in getting the UID
   of an entry.
   [vangheem]
