--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,7 @@ To do:
   the tests work fine with the old feedparser 4.1.
 
 - Use locales instead of an i18n directory.
+
+- Commit 1a159a3138e8af7b349cc9959f4fc951a4d707f4 needs an upgrade
+  step.  Also, check if this works on Plone 3 and if we still want to
+  support that.
