--- a/Products/feedfeeder/i18n/plone.pot
+++ b/Products/feedfeeder/i18n/plone.pot
@@ -1,21 +1,19 @@
+# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
+# SOME DESCRIPTIVE TITLE.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: feedfeeder 1.0\n"
-"POT-Creation-Date: 2006-10-19 12:46+0000\n"
-"PO-Revision-Date: 2006-10-19 12:46+0000\n"
-"Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
-"Language-Team: Zest Software <info@zestsoftware.nl>\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"POT-Creation-Date: 2012-12-11 10:02+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "Language-Code: en\n"
 "Language-Name: English\n"
-"Preferred-Encodings: latin1 utf-8\n"
+"Preferred-Encodings: utf-8 latin1\n"
 "Domain: plone\n"
 
-msgid "Feed Folder"
-msgstr ""
-
-msgid "Feed Item"
-msgstr ""
