--- a/Products/feedfeeder/i18n/feedfeeder-pt-br.po
+++ b/Products/feedfeeder/i18n/feedfeeder-pt-br.po
@@ -23,11 +23,11 @@ msgstr ""
 
 #: ./profiles/default/types/FeedfeederFolder.xml
 msgid "Feed Folder"
-msgstr ""
+msgstr "Pasta de RSS externo"
 
 #: ./profiles/default/types/FeedFeederItem.xml
 msgid "Feed Item"
-msgstr ""
+msgstr "Item do RSS"
 
 #: ./browser/feed.py:47
 msgid "Feed items updated"
