--- a/Products/feedfeeder/i18n/feedfeeder.pot
+++ b/Products/feedfeeder/i18n/feedfeeder.pot
@@ -1,19 +1,20 @@
-# ArchGenXML generated POT File
-# Reinout van Rees <reinout@zestsoftware.nl>, 2006.
+# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
+# SOME DESCRIPTIVE TITLE.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2012-12-11 10:26+0000\n"
-"PO-Revision-Date: Thu Jul 20 09:13:40 2006\n"
-"Last-Translator: Reinout van Rees <reinout@zestsoftware.nl>\n"
-"Language-Team: Reinout van Rees <reinout@zestsoftware.nl>\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"POT-Creation-Date: 2012-12-14 00:03+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "Language-Code: en\n"
 "Language-Name: English\n"
-"Preferred-Encodings: latin1 utf-8\n"
+"Preferred-Encodings: utf-8 latin1\n"
 "Domain: feedfeeder\n"
 
 #: ./content/folder.py:109
@@ -29,7 +30,7 @@ msgstr ""
 msgid "Feed Item"
 msgstr ""
 
-#: ./browser/feed.py:47
+#: ./browser/feed.py:48
 msgid "Feed items updated"
 msgstr ""
 
