--- a/Products/feedfeeder/i18n/plone-nl.po
+++ b/Products/feedfeeder/i18n/plone-nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
-"POT-Creation-Date: 2012-12-11 10:02+0000\n"
+"POT-Creation-Date: 2012-12-14 00:03+0000\n"
 "PO-Revision-Date: 2009-11-05 23:24+0100\n"
 "Last-Translator: Maurits van Rees <m.van.rees@zestsoftware.nl>\n"
 "Language-Team: Zest Software <info@zestsoftware.nl>\n"
@@ -13,4 +13,20 @@ msgstr ""
 "Language-Name: Nederlands\n"
 "Preferred-Encodings: latin1 utf-8\n"
 "Domain: plone\n"
+
+#: profiles/default/portal_atct.xml
+msgid "Date that the FeedItem was last updated."
+msgstr "Datum dat het Feeditem voor het laatst is geüpdatet."
+
+#: profiles/default/types/FeedfeederFolder.xml
+msgid "Edit"
+msgstr "Bewerken"
+
+#: profiles/default/portal_atct.xml
+msgid "FeedItem Updated"
+msgstr "Feeditem geüpdatet"
+
+#: profiles/default/types/FeedfeederFolder.xml
+msgid "View"
+msgstr "Bekijken"
 
