--- a/Products/feedfeeder/locales/fr/LC_MESSAGES/plone.po
+++ b/Products/feedfeeder/locales/fr/LC_MESSAGES/plone.po
@@ -3,7 +3,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: feedfeeder 2.1\n"
 "POT-Creation-Date: 2012-12-21 22:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
